添加一些组件

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(path: ':messageprocessorlib')
+//    implementation 'com.github.GHLiyf:MessageProcessor:1.0'
+}
+allprojects {
+    repositories {
+        maven { url 'https://jitpack.io' }
+    }
 }
