--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation project(path: ':messageprocessorlib')
-//    implementation 'com.github.GHLiyf:MessageProcessor:1.0'
+    implementation 'com.github.GHLiyf:MessageProcessor:1.1'
 }
 allprojects {
     repositories {
